--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "fs": "^0.0.1-security",
     "inquirer": "^8.2.4",
     "jest": "^28.0.3",
+    "nes.css": "^2.3.0",
     "path": "^0.12.7"
   }
 }
